# usps

./: .env  .gitattributes  .gitignore  .isort.cfg  LICENSE  README.md  docker-compose.yml  nginx.conf  postgresql.conf
api/: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
api/addresses_api/: connection.py  db.py  main.py  sample.py  search.py  settings.py  shape.py
api/alembic/: env.py
app/: .prettierrc  README.md  index.html  package.json  postcss.config.cjs  tsconfig.json
app/.husky/: pre-commit
app/src/: AddrMap.svelte  App.svelte  AutoComplete.svelte  Help.svelte  SampleTable.svelte  Search.svelte  api.ts  config.ts  main.ts
app/src/cmp/: AddrMap.svelte  App.svelte
ctl/: Dockerfile  README.md
ctl/scripts/: common.sh  create-oa-sample-view.sql  create-sample-view.sql  create-search-view.sql  db.sh  ingest-fabric.sql  ingest-oa.sql  init_addr_data.sh  init_tiger_data.sh  oa-fill-missing.sql  post-ingest.sql  sample-fn.sql
data/test-shapes/calfire/: calfire-ADELANTO FD.geojson  calfire-ADIN FPD.geojson  calfire-ALAMEDA COUNTY FD.geojson  calfire-ALAMEDA FD.geojson  calfire-ALBION LITTLE RIVER FPD.geojson  calfire-ALHAMBRA FD.geojson  calfire-ALLEGHANY FD.geojson  calfire-ALPINE FPD.geojson  calfire-ALPINE SPRINGS COUNTY WATER DISTRICT.geojson  calfire-ALTA FPD.geojson  calfire-ALTAVILLE‐MELONES FPD.geojson  calfire-ALTURAS CITY FD.geojson  calfire-ALTURAS RURAL FD.geojson  calfire-AMADOR FPD.geojson  calfire-AMERICAN CANYON FPD.geojson  calfire-ANAHEIM FD.geojson  calfire-ANDERSON FPD.geojson  calfire-ANDERSON VALLEY FD.geojson  calfire-ANTELOPE VALLEY FPD.geojson  calfire-APPLE VALLEY FPD.geojson  calfire-ARBUCKLE COLLEGE CITY FD.geojson  calfire-ARBUCKLE COLLEGE CITY FPD.geojson  calfire-ARCADIA FD.geojson  calfire-ARCATA FPD.geojson  calfire-AROMAS TRI COUNTY FPD.geojson  calfire-ARROWBEAR LAKE CWD.geojson  calfire-ARROYO GRANDE FD.geojson  calfire-ARTOIS FPD.geojson  calfire-ATASCADERO FD.geojson  calfire-ATWATER FD.geojson  calfire-AUBERRY VFD.geojson  calfire-AUBURN VFD.geojson  calfire-AVALON-CITY FIRE DEPT.geojson  calfire-AVILA BEACH FPD.geojson  calfire-BAKERSFIELD FD.geojson  calfire-BALD MOUNTAIN VFD.geojson  calfire-BARONA FD.geojson  calfire-BARSTOW FPD.geojson  calfire-BEAR VALLEY FD.geojson  calfire-BEAR VALLEY-INDIAN VALLEY.geojson  (+696 more)
data/test-shapes/mapping-inequality/: mapping-inequality.geojson
data/test-shapes/vt-school-districts/: vt-school-dist-Addison Central USD.geojson  vt-school-dist-Addison Northwest USD.geojson  vt-school-dist-Alburgh.geojson  vt-school-dist-Arlington.geojson  vt-school-dist-Averill.geojson  vt-school-dist-Averys Gore.geojson  vt-school-dist-Barnard.geojson  vt-school-dist-Barre UUSD.geojson  vt-school-dist-Barstow UUSD.geojson  vt-school-dist-Bellows Falls UHSD.geojson  vt-school-dist-Blue Mountain USD.geojson  vt-school-dist-Brighton.geojson  vt-school-dist-Buels Gore.geojson  (+116 more)
fcc/: README.md  extract_state_feature.py  fabric_scraper.py  ingest_tiles.py  progress.py  pyproject.toml  run_all.py  throttle.py
fcc/counttiles/: Makefile  counttiles.c
fcc/cover/: README.md  __init__.py  tile.py
fcc/data/: us-states.geojson
fcc/test/: read.c  read.py  test.csv
secrets/: alembic.dev.ini  node_env.dev
web/: .dockerignore  .prettierrc  Dockerfile  README.md  package.json  playwright.config.ts  svelte.config.js  tailwind.config.cjs
web/src/: app.html
web/tests/: test.ts
(+14 files in other folders)
