[tool.poetry]
name = "addresses-api"
version = "0.1.0"
description = ""
authors = ["Joe Nudell <jnu@stanford.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "addresses_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.46"
alembic = "^1.9.1"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
asyncpg = "^0.27.0"
greenlet = "^2.0.1"
geojson = "^2.5.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^7.0.3"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
