[tool.poetry]
name = "addresses-api"
version = "0.1.0"
description = ""
authors = ["Joe Nudell <jnu@stanford.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.46"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
asyncpg = "^0.27.0"
greenlet = "^2.0.1"
geojson = "^2.5.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.19.1"}


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^7.0.3"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
