[tool.poetry]
name = "fcc"
version = "0.1.0"
description = ""
authors = ["Joe Nudell <jnu@stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mapbox-vector-tile = "^2.0.0"
requests = "^2.28.2"
click = "^8.1.3"
mercantile = "^1.2.1"
geojson = "^2.5.0"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
