[tool.poetry]
name = "fcc"
version = "0.1.0"
description = ""
authors = ["Joe Nudell <jnu@stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
mapbox-vector-tile = "^2.0.0"
click = "^8.1.3"
mercantile = "^1.2.1"
geojson = "^2.5.0"
tqdm = "^4.64.1"
httpx = "^0.23.3"
tile-tools = "0.1.1"
async-throttle = "^0.1.0"
geoalchemy2 = "^0.13.1"
asyncpg = "^0.27.0"
orjson = "^3.8.5"
greenlet = "^2.0.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
